@@ -1,6 +1,7 @@
 Changes to 1.2.5 +nb
 
 [CHANGES]
+*creatures.php --> forest/graveyard active will now be displayed in editor
 *lib/commentary.php --> added a new hook "gmcommentarea" with section and "allow_gm"=>false to handle module requests to allow /game comments 
 	 		added a fix (GM titles didn't work due to wrong variable used)
 *lib/forest.php --> new hook "forest" to add stuff before the description (i.e. for mobile buttons that need to be top)
